# matrixutils_example_pkg

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-on-tag.yml
src/matrixutils/: __init__.py  add.py  matmul.py  transpose.py
tests/: test_add.py  test_matmul.py  test_transpose.py
