[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrixutils_example_pkg"            # change to your desired package name (must be unique on PyPI)
version = "0.0.3"
description = "A tiny example package providing a simple matrix multiplication function."
readme = "README.md"
authors = [{ name="Your Name", email="you@example.com" }]
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []